@@ -5,6 +5,10 @@ TODO:
  * Add module for relaying events
  * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 
+2008-02-14 MickeM
+ + Added so commands starting in host_ (NSCA Handlers) are sent as host-commands
+ * Fixed a copy constructor in NSCA Commands (now service checks are sent as service checks)
+
 2008-02-13 MickeM
  + Added string_length to [Settings] as well (used internally) for all "injected" buffers.
  * Fixed issue with scripts result truncated efter 1024 chars 
